--- a/huy.html
+++ b/huy.html
@@ -70,7 +70,7 @@
         <img src="img/huy.jpg" alt="">
         <div class="content">
             <h1>Phúc Huy</h1>
-            <h2>Chúc mừng sinh nhật bạn tui. Tuổi mới, chúc m luôn có sức khỏe tươi mới để quẩy cùng ae , gặp may mắn trong công việc, học tập. Happy Birthday my friend!!! </h2>
+            <h2>Chúc mừng sinh nhật tuổi 20! Đây là cột mốc đầy ý nghĩa, mở ra một chặng đường mới với thật nhiều cơ hội và thử thách. Chúc bạn luôn tràn đầy năng lượng, hứng khởi và thành công trên con đường mình đã chọn. Hãy sống hết mình, dám ước mơ và biến tuổi 20 thành kỷ niệm đẹp nhất! 🎉🎂🎁 (GPT) </h2>
         </div>
        
     </div>
