--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="six">
-            <img src="https://scontent.fdad2-1.fna.fbcdn.net/v/t39.30808-6/284812906_744089883299538_632103650440965265_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHVbSFwuUfTDJpDaEGjwd-w9HG_v7Jrszr0cb-_smuzOlw6ZHIVUiOBZdj7aMMAS9FTpQGnW8DpaDaRLXzUdvCE&_nc_ohc=mNSZ-ip0acQQ7kNvgFIwsQ_&_nc_ht=scontent.fdad2-1.fna&_nc_gid=AKFRN9NWCd4wBvSPS3pXB9-&oh=00_AYAtvQKFMIZGOeyqiv-S2fk9bXjriOm-IAvfA0xmRa9Duw&oe=66ECB73A" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="img/tkk.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Chúc mừng sinh nhật m nha</h3>
@@ -143,7 +143,7 @@
         </div>
 
         <div class="nine">
-            <p>Đó là lời chúc của t đó, ngoài ra còn có mấy lời chúc của mấy ae trong lớp t tổng hợp m xem lời chúc của từng đứa nha</p>
+            <p>Đó là lời chúc của t đó, ngoài ra còn có mấy lời chúc của mấy ae t tổng hợp m xem lời chúc của từng đứa nha</p>
            
             <ul>
                 <li>
